added the stylesheet

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,10 @@
 </head>
 <body>
 
+<div id="flash">
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
-
+</div>
 
 <%= yield %>
 
