--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,8 @@
 <div id="header">
   <% if user_signed_in? %>
-    You're signed in
+    <p>You're signed in</p>
   <% else %>
-    <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
+    <p><%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %></p>
   <% end %>
 </div>
 
