lots of new changes, mainly the plupload library

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,9 +6,13 @@
   <% end %>
 </div>
 
-<div id="dropzone">
-  <div id="label">
-    Drop a file here to share it on facebook or twitter.
+<div id="dropzone_container">
+  <div id="dropzone">
+    <div id="label">
+      Drop a file here to share it on facebook or twitter.
+    </div>
+    <div id="pickfiles"></div>
+    <div id="percentage"></div>
   </div>
 </div>
 
